Fixed scrollbar issues and mobile scaling.

--- a/css/base.css
+++ b/css/base.css
@@ -3,9 +3,7 @@
  			-moz-background-size: cover;
  			-o-background-size: cover;
 		  	background-size: cover;
-			background-size:cover; 
 			z-index:-100; 
-			position:fixed; 
 			top:0;
 			min-height:100%; min-width:100%; margin:auto;
 			}
@@ -17,17 +15,26 @@
 	top:0;
 	width:100%;
 	height:100%;
+	position:fixed;
 	}
+
+.logo {
+	max-height:200px;
+	min-height:100px;
+	background:url(../assets/gstplogoc.png) no-repeat center center;
+	background-size:contain;
+	}
+
 
 #hero1 {
 	/*background-image:url(../assets/pull.jpg); background-position:center right; background-size:cover; */
 	
-	vertical-align:middle; color:#fff; min-height:100px; position:relative; z-index:-1; margin-bottom:50px;}
+	vertical-align:middle; color:#fff; min-height:100px; position:relative; z-index:-1;}
 
 #hero1 h1 {color: #fff; text-shadow: 0px 0px 10px #000; font-size:2.5em; display: inline-block; position:absolute; top:30%; }
 #hero1 h1 .label {font-size: .5em; vertical-align:central;}
 
-.welcome {margin-bottom:30px;}
+.welcome {margin-bottom:30px; margin-top:30px;}
 
 .btn {text-transform:uppercase; font-family: Oswald;}
 .label {font-family: Oswald;}
